# BotConfetti

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
bot_confetti/: config.py  database.py  messages.py
bot_confetti/keyboards/: admin.py  user.py
bot_confetti/services/: booking.py  broadcast.py  content.py
bot_confetti/utils/: formatting.py
tests/: test_admin_behaviour.py  test_booking_management.py
