[project]
name = "bot-confetti"
version = "0.1.0"
description = "Telegram bot for the Confetti French tutoring studio"
readme = "README.md"
authors = [
    { name = "Confetti Team", email = "team@confetti.local" }
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-telegram-bot==20.7",
    "python-dotenv==1.0.0",
]

[project.scripts]
confetti-bot = "main:main"

[tool.poetry]
package-mode = true

[[tool.poetry.packages]]
include = "bot_confetti"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
